# iiif-zero-out

./: .gitignore  LICENSE  README.md  iiif_zero_out.py  pyproject.toml  test.json  test_iiif_zero_out.py
.github/workflows/: ci.yml
iiif_zero_out/: main.py  models.py  settings.py
tests/: test.json  test_iiif_zero_out.py
