[tool.poetry]
name = "iiif-zero-out"
version = "0.1.0"
description = "Create a IIIF-0-compliant file structure from a live IIIF-1/2-compliant endpoint and a JSON file describing desired images, default tiling preferences, andy any custom detail tiles."
authors = ["Matthew Lincoln <matthew.d.lincoln@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
