[tool.poetry]
authors = ["Matthew Lincoln <matthew.d.lincoln@gmail.com>"]
description = "Create a IIIF-0-compliant file structure from a live IIIF-1/2-compliant endpoint and a JSON file describing desired images, default tiling preferences, andy any custom detail tiles."
license = "MIT"
name = "iiif-zero-out"
version = "0.2.0"

[tool.poetry.dependencies]
pydantic-cli = "^4.3.0"
python = "^3.9"
requests = "^2.27.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.961"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-s -p no:warnings --cov=iiif_zero_out --log-level=DEBUG"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
